2009-09-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix support for `slc -combine'.

	When using `-combine=P', multiple inclusions of `sl_support.h'
	would occur and cause multiple definitions to happen later during
	compilation.
	
	* tools/lib/t-utc0/include/sl_support.h,
	* tools/lib/t-seqc/include/sl_support.h,
	* tools/lib/t-ptl/include/sl_support.h,	
	* tools/lib/t-pppalpha/include/sl_support.h: Protect definitions
	with conditional.

2009-09-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add support for reusing `slr' parameters.
	
	* tools/bin/slt.in: Use the variable `EXTRA_RUN_ARGS' on each run
	of `slr'. (Requested by M. Lankamp)

2009-09-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Expose the availability of place management to programs.

	* lib/include/svp/sep.h: Introduce the macro `SVP_HAS_SEP' is
	introduced which signals to program the availability of place
	management.

2009-09-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Integrate the place allocator in the library.

	* tools/lib/mtalpha-sim/slrt.s: Move the definition of the
	pointers to fibre and variable data, as well as their
	initializations, to C code in...
	
	* slc/lib/src/mtinit.c: here. Call the place allocator
	initialization as part of the library initialization.
	
	* slc/lib/Makefile.am: Mention the new files.

	* slc/lib/mtalpha.mk: Compile them into the library.

2009-09-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Import Joe's work on place allocation.

	An initial version of a SVP place allocator was developed by Joe
	Master using a first-fit algorithm; this was extended to provide
	multiple allocation policies.
	
	* lib/include/svp/sep.h,
	* lib/src/mtsep.c: New.

2009-09-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix symbolic place names in `seqc'.

	The `seqc' implementation was out-of-sync with the others in not
	defining `PLACE_LOCAL' and `PLACE_DEFAULT'.
	
	* tools/lib/t-seqc/include/sl_support.h: Rename `SVP_LOCAL' to
	`PLACE_LOCAL' and define `PLACE_DEFAULT'.
