@@ -187,7 +187,7 @@ Examples:
   roman.c                                        LR=  LRD  LX- :(
 
 
-Usage: $0 [SOURCE] [IMPLEMENTATION]...
+Usage: $0 [SOURCE].. [--] [IMPLEMENTATION]...
 
 Options:
 
@@ -201,6 +201,10 @@ variable SLT_IMPL_LIST is used.
 
 Implementations names are passed to \`slc' as-is via the -b
 command-line parameter. See "slc --help" for details.
+
+A single test may be composed of multiple source files, to be compiled
+together to form executables. When specifying multiple sources, the --
+separator must be specified.
 
 Configuring expected failures for tests:
   To indicate expected failures in specitic tests, the test source
@@ -323,14 +327,17 @@ EOF
    exit 0 
 }
 
-
-if test "$1" = "--help" -o "$1" = "-h"; then
-  usage
-  exit 0
-elif test "$1" = "--version" -o "$1" = "-v"; then
-  rev='$Rev$'
-  rev=${rev#* }
-  cat <<EOF
+found_sep=
+for arg in "$@"; do
+    case $arg in
+	--help|-h)
+            usage
+            exit 0
+            ;;
+	--version|-v)
+	    rev='$Rev$'
+	    rev=${rev#* }
+	    cat <<EOF
 $basename $version (rev $slrev/$rev)
 
 $copyright
@@ -339,8 +346,52 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 Written by Raphael 'kena' Poss.
 EOF
-  exit 0
+	    exit 0
+	    ;;
+	--) found_sep=1; break ;;
+	-*) die "unrecognized option \`$arg'" ;;
+    esac
+done
+
+if test -n "$found_sep"; then
+    # arg format: file file ... -- impl impl ...
+    fixture=()
+    impl_list=()
+    after_sep=
+    for arg in "$@"; do
+	if test -n "$after_sep"; then
+	    impl_list+=($arg)
+	else
+	    if test "x$arg" = "x--"; then
+		after_sep=1
+	    else
+		if ! test -r "$arg"; then
+		    die "$arg: cannot read file" 
+		fi
+		fixture+=($arg)
+	    fi
+	fi
+    done
+else
+    # arg format: file impl impl ...
+    fixture=($1)
+    shift
+    impl_list=("$@")
 fi
+
+if test 0 = ${#fixture[*]}; then
+    die "$1: no test sources specified"
+fi
+
+if test 0 = ${#impl_list[*]}; then
+   if test -n "$SLT_IMPL_LIST"; then
+      impl_list=($SLT_IMPL_LIST)
+   else
+     die "no implementation specified and SLT_IMPL_LIST not set or empty. See -h for details."
+   fi
+fi
+
+impl1=${impl_list[0]}
 
 # Sanity check: verify that dependencies are there.
 test_exec() {
@@ -353,18 +404,14 @@ test_exec "$runner"
 test_exec "$timeout"
 
 # Compute base name and directory of test source.
-testdir=$(dirname "$1")
-testsrc=$1
-
-if test ! -r $testsrc; then
-   die "$testsrc: cannot read file" 
-fi
+testdir=$(dirname "${fixture[0]}")
+testsrc=${fixture[0]}
 
 if test -z "$SRCDIR"; then
     SRCDIR=.
 fi
 
-testbase=${1##*/}
+testbase=${testsrc##*/}
 case $testbase in
   *.c)      testname=${testbase%.c};;
   *.S)      testname=${testbase%.S};;
@@ -376,18 +423,6 @@ Usage: $basename [SOURCE] [IMPLEMENTATION]...
 EOF
    exit 2
 esac
-
-shift
-
-if test $# = 0; then
-   if test -n "$SLT_IMPL_LIST"; then
-      set $SLT_IMPL_LIST
-   else
-     die "no implementation specified and SLT_IMPL_LIST not set or empty. See -h for details."
-   fi
-fi
-impl1=$1
-shift
 
 check_status() {
     status=ok
@@ -522,8 +557,9 @@ report_run() {
 do_compile() {
   local offset command x
   offset=$1
-  echo "===== TEST: $testsrc, COMPILE ======" >$baseout.log
-  command=("$slc" -v -t "$outdir" -b "$impl" -o "$baseout.x" "$testsrc" -I. ${COMPILE_ARGS:+"${COMPILE_ARGS[@]}"})
+  echo "===== TEST: ${fixture[*]}, COMPILE ======" >$baseout.log
+  mkdir -p "$baseout.build"
+  command=("$slc" -v -t "$baseout.build" -b "$impl" -o "$baseout.x" "${fixture[@]}" -I. ${COMPILE_ARGS:+"${COMPILE_ARGS[@]}"})
   echo "${command[*]}" >>$baseout.log
   set +e
   KEEP=1 TIMEOUT=60 "${command[@]}" >>$baseout.log 2>&1
@@ -644,7 +680,7 @@ do_preptest() {
     rm -rf "$baseout".* || true
 
     if ! mkdir -p "$baseout".lck >/dev/null 2>&1; then
-	die "$outdir: cannot create directory" 
+	die "$baseout.lck: cannot create directory" 
     fi
     
     if ! test -w "$outdir"; then
@@ -662,11 +698,11 @@ basenames=
 do_preptest "$impl1"
 
 prefign=${XIGNORE:-*x:*}
-xfailpats=$(grep "XFAIL:" <"$testsrc"|sed -e 's/^.*XFAIL:\(.*\)$/\1/g')
-ignpats=$(echo "$prefign"; grep "XIGNORE:" <"$testsrc"|sed -e 's/^.*XIGNORE:\(.*\)$/\1/g')
-xtopats=$(grep "XTIMEOUT:" <"$testsrc"|sed -e 's/^.*XTIMEOUT:\(.*\)$/\1/g')
+xfailpats=$(grep "XFAIL:" "${fixture[@]}"|sed -e 's/^.*XFAIL:\(.*\)$/\1/g')
+ignpats=$(echo "$prefign"; grep "XIGNORE:" "${fixture[@]}"|sed -e 's/^.*XIGNORE:\(.*\)$/\1/g')
+xtopats=$(grep "XTIMEOUT:" "${fixture[@]}"|sed -e 's/^.*XTIMEOUT:\(.*\)$/\1/g')
 
-grep "SLT_RUN:" <"$testsrc"|sed -e 's/^.*SLT_RUN:\(.*\)$/\1/g' >"$baseout".runspec
+grep "SLT_RUN:" "${fixture[@]}"|sed -e 's/^.*SLT_RUN:\(.*\)$/\1/g' >"$baseout".runspec
 nruns=$(wc -l <"$baseout".runspec)
 if test $nruns = 0; then
     echo >"$baseout".runspec
@@ -682,11 +718,14 @@ if test -z "$TEXT_ONLY"; then
 	COLUMNS=$(stty size|cut -d' ' -f2)
     fi
     COLUMNS=${COLUMNS:-80}
-    nrimpl=$#
+    nrimpl=${#impl_list[*]}
     nrcols=$(( ($nrimpl + 1) * $colspertest ))
     remainder=$(($COLUMNS - $nrcols - 5))
     if test $remainder -lt 20; then remainder=20; fi
     name=$testsrc
+    if test 1 -lt ${#fixture[*]}; then
+	name="$name+..."
+    fi
     namelen=${#name}
     if test $namelen -gt $remainder; then
 	name=$(sed -e 's,\([0-9]_\)[^/]*,\1*,g' <<<"$name")
@@ -753,7 +792,7 @@ check_proc $x
 # Perform other tests asynchronously
 towait=
 refout=$baseout.out
-for impl1 in "$@"; do
+for impl1 in "${impl_list[@]:1}"; do
     offset=$(($offset + $colspertest))
     do_preptest "$impl1"
     do_check $impl $offset "$refout" &
